; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_notes.c_init_notes_check.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_notes.c_init_notes_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.notes_tree = type { i8*, i8* }

@default_notes_tree = common dso_local global %struct.notes_tree zeroinitializer, align 8
@NOTES_INIT_WRITABLE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"refs/notes/\00", align 1
@.str.1 = private unnamed_addr constant [52 x i8] c"refusing to %s notes in %s (outside of refs/notes/)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.notes_tree* (i8*, i32)* @init_notes_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.notes_tree* @init_notes_check(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.notes_tree*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @init_notes(i32* null, i32* null, i32* null, i32 %7)
  store %struct.notes_tree* @default_notes_tree, %struct.notes_tree** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @NOTES_INIT_WRITABLE, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %2
  %14 = load %struct.notes_tree*, %struct.notes_tree** %5, align 8
  %15 = getelementptr inbounds %struct.notes_tree, %struct.notes_tree* %14, i32 0, i32 0
  %16 = load i8*, i8** %15, align 8
  br label %21

17:                                               ; preds = %2
  %18 = load %struct.notes_tree*, %struct.notes_tree** %5, align 8
  %19 = getelementptr inbounds %struct.notes_tree, %struct.notes_tree* %18, i32 0, i32 1
  %20 = load i8*, i8** %19, align 8
  br label %21

21:                                               ; preds = %17, %13
  %22 = phi i8* [ %16, %13 ], [ %20, %17 ]
  store i8* %22, i8** %6, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = call i32 @starts_with(i8* %23, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %31, label %26

26:                                               ; preds = %21
  %27 = call i32 @_(i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.1, i64 0, i64 0))
  %28 = load i8*, i8** %3, align 8
  %29 = load i8*, i8** %6, align 8
  %30 = call i32 @die(i32 %27, i8* %28, i8* %29)
  br label %31

31:                                               ; preds = %26, %21
  %32 = load %struct.notes_tree*, %struct.notes_tree** %5, align 8
  ret %struct.notes_tree* %32
}

declare dso_local i32 @init_notes(i32*, i32*, i32*, i32) #1

declare dso_local i32 @starts_with(i8*, i8*) #1

declare dso_local i32 @die(i32, i8*, i8*) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
